# wayland-pipewire-idle-inhibit

./: .envrc  .gitignore  Cargo.toml  README.md  default.nix  flake.nix  module.nix  shell.nix  wayland-pipewire-idle-inhibit.service
modules/: common.nix  home-manager.nix  nixos.nix
nix/modules/: common.nix
scripts/: dbus_monitor.sh
src/: args.rs  config.rs  dbus_server.rs  dbus_service.rs  inhibit_idle_state.rs  main.rs  message_queue.rs
src/idle_inhibitor/: mod.rs
src/idle_inhibitor/dbus/: mod.rs
src/idle_inhibitor/dry/: mod.rs
src/idle_inhibitor/wayland/: mod.rs
src/pipewire_connection/: graph.rs  graph_filter.rs  mod.rs
src/pipewire_connection/graph/: filter.rs  mod.rs  object.rs
src/settings/: cli.rs  mod.rs
src/wayland_connection/: mod.rs
src/wayland_idle_inhibitor/: mod.rs
