[package]
name = "wayland-pipewire-idle-inhibit"
version = "0.1.0"
authors = ["Rafael Carvalho <contact@rafaelrc.com>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/rafaelrc7/wayland-pipewire-idle-inhibit"
readme = "README.md"
description = "Inhibit wayland idle when computer is playing sound"
keywords = ["pipewire", "wayland", "utility", "idle", "inhibit"]
categories = ["multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipewire = "0.7.2"
log = "0.4"
env_logger = "0.10"
timer = "0.2"
chrono = "0.4"
signal-hook = "0.3"
wayland-protocols = { version = "0.31", features = ["unstable", "client"] }
wayland-client = "0.31"

