[package]
name = "wayland-pipewire-idle-inhibit"
version = "0.6.0"
authors = ["Rafael Carvalho <contact@rafaelrc.com>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/rafaelrc7/wayland-pipewire-idle-inhibit"
readme = "README.md"
description = "Inhibit wayland idle when computer is playing sound"
keywords = ["pipewire", "wayland", "utility", "idle", "inhibit"]
categories = ["multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "cargo", "string"] }
fastrand = "2.3"
figment = { version = "0.10", features = ["toml"] }
log = { version = "0.4", features = ["serde"] }
nix = { version = "0.30", features = ["event", "mman", "fs"] }
pipewire = "0.8"
regex = "1.10"
serde_regex = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.7"
signal-hook = "0.3"
simplelog = "0.12"
timer = "0.2"
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["unstable", "client"] }
wayland-protocols-wlr = { version = "0.3.8", features = ["client"] }
xdg = "2.5"
zbus = "4.1"
